        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.39.cfs8
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : enhancement
Bugzilla   : 12786
Description: lfs setstripe enhancement
Details    : Make lfs setstripe understand 'k', 'm' and 'g' for stripe size.

Severity   : normal
Frequency  : mds/oss recovery 
Bugzilla   : 10800
Description: llog ctxt is refrenced after it has been freed. 
Details    : llog ctxt refcount was added to avoide the race between ctxt free
	     and llog recovery process. Each llog user must hold ctxt refcount
	     before it access the llog. And the llog ctxt can only be freed
	     when its refcount is zero.

Severity   : enhancement
Bugzilla   : 12211
Description: randomly memory allocation failure util
Details    : Make lustre randomly failed allocating memory for testing purpose.

Severity   : normal
Frequency  : only for SLES10
Bugzilla   : 12771
Description: Update kernel patch for SLES10 SP1
Details    : Add patch blkdev_tunables-2.6-sles10.patch to 2.6-sles10.series.

Severity   : enhancement
Bugzilla   : 10786/9303
Description: omit set fsid for export NFS
Details    : fix set/restore device id for avoid EMFILE error and mark lustre fs
	     as FS_REQUIRES_DEV for avoid problems with generate fsid.

Severity   : major
Bugzilla   : 12769
Description: Add sync option to mount_lustre.c
Details    : Client loses data written to lustre after a network interruption.

Severity   : normal
Bugzilla   : 10595
Description: Error message improvement.
Details    : Merging of two LCONSOLE_ERROR_MSG into one.

Severity   : normal
Bugzilla   : 12606
Description: don't use GFP_* in generic Lustre code.